portfolio/src/App.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap");

/* Universal */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  max-width: 100%;
}

body {
  font-family: "Roboto", sans-serif;
  overflow-x: hidden;
  position: relative;
}

html {
  color: #ffffff;
  font-size: 62.5%;
  overflow-x: hidden;
}

h1 {
  font-size: 3rem;
  font-style: normal;
  font-weight: 500;
  line-height: 28px;
}

h2 {
  font-style: normal;
  font-weight: 300;
  font-size: 2.2rem;
  line-height: 21px;
}

h3 {
  font-style: normal;
  font-weight: 900;
  font-size: 2rem;
}

p {
  font-size: 1.6rem;
  font-style: normal;
  font-weight: 500;
  line-height: 30px;
}

.cornerTag {
  display: flex;
  justify-content: left;
  align-items: center;
  padding: 1%;
}

/* App.js */
.App {
  text-align: left;
}

/* Nav.js */
.allLinks {
  color: #000000;
  font-style: normal;
  font-size: 1.4rem;
  text-decoration: none;
  transition: all 0.3s ease;
  width: 100%;
  padding: 1%;
}

.allLinks:hover {
  border-radius: 5px;
  background: dimgrey;
  color: white;
  cursor: pointer;
}

nav {
  text-align: center;
  background: #e5e5e5;
  opacity: 0.8;
  border-radius: 5px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  box-shadow: 5px 5px 20px #000000;
  margin: 1.5% auto;
  padding: 0.25%;
  width: 750px;
  z-index: 1;
  position: fixed;
}

/* Nav px to % starts here */

@media (max-width: 1000px) {
  nav {
    margin: 0 auto;
    width: 100%;
    border-radius: 0px;
    box-shadow: none;
    padding: 0.75%;
  }
}

/* Nav px to % ends here */

#myNav {
  display: flex;
  justify-content: center;
}

/* Footer.js */
footer {
  color: #000000;
  margin: 1.5% 0;
  padding: 1%;
  text-align: center;
}

/* Home.js */
#home {
  padding-top: 9%;
}

.homeMainBox {
  margin: 0 auto;
  background: #b57272;
  width: 1250px;
  height: 750px;
}

.homeContent {
  width: 100%;
  height: 93%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.homeContentLeft {
  padding: 3%;
  width: 50%;
}

.homeContentLeft h2 {
  margin: 10% 0%;
}

.myself {
  width: 250px;
  margin: 0 auto;
}

.homeContentRight {
  padding: 3%;
  width: 38%;
}

.homeContactBtn {
  display: flex;
  justify-content: center;
  margin-top: 10%;
}

.homeContactBtn a {
  text-decoration: none;
  cursor: pointer;
  border: 1px solid #ffffff;
  color: #ffffff;
  background: none;
  width: 250px;
  height: 30px;
  font-style: normal;
  font-weight: normal;
  font-size: 1.4rem;
  line-height: 16px;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Home media queries starts here */

@media (max-width: 750px) {
  .homeContent {
    flex-direction: column;
  }

  .homeContentLeft {
    padding: 2% 2% 0 2%;
    width: 750px;
  }

  .homeContentRight {
    padding: 0 2% 0.5% 2%;
    width: 750px;
  }

  .homeContactBtn {
    display: none;
  }
}

@media (max-width: 525px) {
  .myself {
    width: 200px;
  }
}

/* Home media queries ends here */

/* Work.js */
#work {
  padding-top: 9%;
}

.workMainBox {
  margin: 0 auto;
  background: #b59a72;
  width: 1250px;
  height: 750px;
}

/* Desktop Shown / Hide Starts Here */

@media (min-width: 850px) {
  .workContentDesktop {
    width: 100%;
    height: 93%;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .workSlideshowCard {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .workSlideshowNavBtn {
    border: none;
    width: 30px;
    height: 75px;
    background: #c4c4c4;
    cursor: pointer;
  }

  .workSlideshowCenter {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }

  .workSlideshowCenterActive {
    transition: 0.75s ease;
  }

  .workSlideshowCenter p {
    margin: 0.25%;
  }

  .workSlideshowImage {
    width: 60%;
  }

  .workSlideTitle {
    width: 175px;
  }

  .workSlideshowTitleBtn {
    width: 75%;
    margin: 2%;
    padding: 1.5%;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .workSlideshowBtns {
    text-decoration: none;
    border: 1px solid #ffffff;
    color: #ffffff;
    background: none;
    width: 128px;
    height: 31px;
    font-style: normal;
    font-weight: normal;
    font-size: 12px;
    line-height: 14px;
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

@media (max-width: 850px) {
  .workContentDesktop {
    display: none;
  }
}

/* Desktop Shown / Hide Ends Here */

/* Mobile Shown / Hide Starts Here */

@media (max-width: 851px) {
  .workContentMobile {
    width: 100%;
    height: 93%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }

  .workCard {
    cursor: pointer;
    width: 95%;
    height: 150px;
    margin: 1.75% 2%;
    overflow: hidden;
    position: relative;
  }

  .workCard h2 {
    color: #000000;
    left: 5px;
    bottom: 10px;
    position: absolute;
  }

  .workCardImage {
    width: auto;
  }
}

@media (min-width: 851px) {
  .workContentMobile {
    display: none;
  }
}

/* Mobile Shown / Hide Ends Here */

/* Skill.js */
#skill {
  padding-top: 9%;
}

.skillMainBox {
  margin: 0 auto;
  background: #a3b572;
  width: 1250px;
  height: 750px;
}

.skillContent {
  width: 100%;
  height: 93%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.skillNavPlacement {
  display: flex;
  justify-content: center;
}

.skillNav {
  width: 85%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.skillNavBtn {
  font-style: normal;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 19px;
  width: 100%;
  padding: 1.5%;
  cursor: pointer;
  text-align: center;
  border-bottom-color: #8e8e8e;
  border-bottom-width: 3px;
  border-bottom-style: solid;
}

.skillNavBtnActive {
  border-bottom-color: #ffffff;
  transition: 0.75s ease;
}

.skillDisplayPlacement {
  display: flex;
  justify-content: center;
}

.skillDisplayRevealText {
  text-align: center;
  width: 90%;
  font-style: normal;
  font-weight: bold;
  font-size: 2.2rem;
  line-height: 28px;
}

.skillDisplayHideText {
  display: none;
}

.skillDisplayRevealText li {
  list-style: none;
  list-style-type: none;
}

.skillResumeBtn {
  display: flex;
  justify-content: center;
  margin: 5% 0;
}

.skillResumeBtn button {
  color: #ffffff;
  border: 1px solid #ffffff;
  background: none;
  width: 250px;
  height: 30px;
  cursor: pointer;
  font-style: normal;
  font-weight: normal;
  font-size: 1.4rem;
  line-height: 16px;
}

/* Story.js */
#story {
  padding-top: 9%;
}

.storyMainBox {
  margin: 0 auto;
  background: #d5ca69;
  width: 1250px;
  height: 750px;
}

.storyContent {
  width: 100%;
  height: 93%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.storyCard {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.storyNavBtn {
  border: none;
  width: 30px;
  height: 75px;
  background: #c4c4c4;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
}

.storyCenter {
  width: 95%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.storyCenter p {
  margin: 1% 1.5%;
}

.storyImage {
  width: 65%;
  margin-bottom: 1.5%;
  display: flex;
  justify-content: center;
}

/* Contact.js */
#contact {
  padding-top: 9%;
}

.contactMainBox {
  margin: 0 auto;
  background: #72a5b5;
  width: 1250px;
  height: 750px;
}

.contactContent {
  width: 100%;
  height: 93%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.contactInfoPlacement {
  margin: 2.5%;
  width: 500px;
  height: 100px;
  background: #8e8e8e;
  font-style: normal;
  font-weight: 500;
  font-size: 1.8rem;
  line-height: 19px;
  display: flex;
  align-items: center;
}

.contactTextStack {
  width: 100%;
  height: 100px;
  padding: 1.25%;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.contactTextTitle {
  font-style: normal;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 19px;
}

.contactTextInfo {
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
}

.contactIcon {
  width: 100px;
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: #e4e4e4;
}

.contactTopBtn a {
  text-decoration: none;
  cursor: pointer;
  border: 1px solid #ffffff;
  color: #ffffff;
  background: none;
  width: 250px;
  height: 30px;
  font-style: normal;
  font-weight: normal;
  font-size: 1.4rem;
  line-height: 16px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 10%;
}

/* WorkCardInfo.js */
.workPage {
  background: #b59a72;
  width: 100%;
  padding: 2.5% 2%;
}

.workPageCornerTag {
  display: flex;
  cursor: pointer;
  width: 125px;
}

.workPageTitle {
  text-align: center;
  font-style: normal;
  font-weight: 300;
  font-size: 2.2rem;
  line-height: 30px;
  margin: 7%;
}

.workPageImg {
  width: auto;
}

.workPageBtn {
  margin: 7% 0;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.workPageBtn a {
  text-decoration: none;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 125px;
  height: 30px;
  background: none;
  border: 1px solid #ffffff;
  color: #ffffff;
  font-style: normal;
  font-weight: normal;
  font-size: 1.4rem;
  line-height: 16px;
}

/* Resume.js */
.resumePage {
  background: #a3b572;
  width: 100%;
  padding: 2.5% 2% 10% 2%;
}

.resumePageCornerTag {
  display: flex;
  cursor: pointer;
  width: 125px;
}

.resumePageTitle {
  text-align: center;
  font-style: normal;
  font-weight: 300;
  font-size: 2.2rem;
  line-height: 30px;
  margin: 7%;
}

.resumeDocument {
  display: flex;
  justify-content: center;
}

.resumeDocument iframe {
  width: 85%;
  height: 750px;
}

